# TOY-DEV-For-deployment

./: .gitignore  README.md  compose.production.cloud.yaml  compose.production.local.yaml  compose.production.yaml  compose.yaml  production.env.sample  structure.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml  security.yml
backend/: .dockerignore  .env  Dockerfile  docker-entrypoint.sh  logger.py  main.py  pyproject.toml  tasks.db
backend/alembic/: env.py
backend/alembic/versions/: 788933d35cbe_initial_schema.py
backend/src/: app.py  database.py  models.py  schemas.py  server.py  settings.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/config/: app.js
nginx/: Dockerfile  nginx.conf
scripts/: backend.sh  deploy.sh  docker.sh  frontend.sh
