[project]
name = "backend"
version = "0.1.0"
description = "Toy Dev Backend API"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.138.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

# ==========================================================
# Development Dependencies
# ==========================================================

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.8",
    "black>=25.1.0",
    "mypy>=1.18.1",
]

# ==========================================================
# Black
# ==========================================================

[tool.black]
line-length = 88
target-version = ["py313"]

extend-exclude = '''
(
    ^/alembic/versions
  | ^/.venv
)
'''

# ==========================================================
# Ruff
# ==========================================================

[tool.ruff]
line-length = 88
target-version = "py313"

exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",
]

fixable = ["ALL"]

# ==========================================================
# Pytest
# ==========================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-ra"

# ==========================================================
# MyPy
# ==========================================================

[tool.mypy]
python_version = "3.13"

ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true

exclude = [
    "^alembic/",
    "^\\.venv/",
]